src/App.css
/* RESETS */
* {
    box-sizing: border-box
}

button{
    border: none;
    margin: 0;
    padding: 0;
    width: auto;
    overflow: visible;

    background: transparent;

    /* inherit font & color from ancestor */
    color: inherit;
    font: inherit;

    /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
    line-height: normal;

    /* Corrects font smoothing for webkit */
    -webkit-font-smoothing: inherit;
    -moz-osx-font-smoothing: inherit;

    /* Corrects inability to style clickable `input` types in iOS */
    -webkit-appearance: none;
}

/* Remove excess padding and border in Firefox 4+ */
button::-moz-focus-inner {
    border: 0;
    padding: 0;
}


/* Tip Section */
.tip-box{
	background-color: white;
	background-color: rgba(255,255,255,0.6);
	font-size:1em;
	display:flex;
	flex-direction: column;
	align-items: center;
	margin-bottom:0.5em;

}
.tip{
	width:80%;
	background-color: white;
	background-color: rgba(255,255,255,0.9);
	padding:1em;
	border-radius: 5px;
	box-shadow: 0px 2px 5px rgba(0,0,0,0.2);
	line-height: 1.5em;
}
.tip-link{
	padding:0.5em;
	font-size:1.5em;
}
.tip-icon{
	padding:0.5em;
	color:red;
}


html{
	height:100%;
}
body{
	margin:0;
	padding:0;
	font-family: 'Barlow', sans-serif;
	background-color: grey;
	background-image: url('https://www.transparenttextures.com/patterns/diagmonds-light.png');
	height:100%;
	color:#232323;
}

svg:hover{
	fill: #6dc2ff;
	cursor:pointer;
}

.social-render{
	width:1200px;
	height:630px;
	display:flex;
	align-items: center;
	justify-content: center;
	background-color: rgba(52, 167, 238, 0.7);
}

h1,h2,p{
	margin:0;
}

.app-container{
	width:100%;
	height:100%;
}


.header-gap{
	height:7em;
}

.card{
	background-color: rgba(201, 238, 255,0.3);
	width:100%;
	display:flex;
	flex-direction: column;
	align-items: center;
	margin:0 auto;
	box-shadow: 3px 3px 10px rgba(0,0,0,0.3);
}

button{
	background:white;
	width:100%;
	display:block;
	font-size:1.3em;
	min-height:2.7em;
	transition: background-color 0.2s;
	position:relative;
	user-select: none;
	color:#232323;
	border:1px ridge rgba(219, 219, 219,0.5);
}

button:after{
	content:">";
	position:absolute;
	top:0.4em;
	right:1em;
	transform-origin:center;
	transform:scale(2.5);
	opacity:0.2;
	font-family: 'Dosis', sans-serif;
}
button:focus{
	outline: none;
}

form{
	display:flex;
	width:100%;
	flex-direction: column;
	align-items: center;
}

button:hover{
	background-color: #fcfeff;
	cursor:pointer;
}

.card-text{
	background:white;
	font-size:1.2em;
	text-align: center;
	width:100%;
	padding:0.5em;
	box-shadow: 1px 1px 10px rgba(0,0,0,0.3);
}
.text-box{
	border:none;
	box-shadow: 1px 1px 10px rgba(0,0,0,0.2);
	width:80%;
	font-size:1.5em;
	padding:0.5em;
	height:2.5em;
	margin:0.5em 0;
	border-radius: 7px;
}

.select-box{
	/* border:ridge 3px rgba(0,0,0,0.8); */
	background:white;
	font-size:1.5em;
	text-align: center;
	width:80%;
	margin: 1em auto;
	padding:0.5em;
	border:none;
	/* border-radius:15px; */
	box-shadow: 3px 3px 15px rgba(0,0,0,0.4);
	text-align-last: center;
}

/* Slide Container Styles */

.slidecontainer {
    width: 90%;
	margin: 0 auto;
	display:flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

/* The slider itself */
.slider {
    -webkit-appearance: none;
    appearance: none;
    width: 100%; /* Full-width */
    height: 20px; /* Specified height */
    background: white;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .3s;
	border-radius: 25px;
	box-shadow: inset 0px 0px 3px black;
	margin:2.5em 0;
}

/* Mouse-over effects */
.slider:hover {
    opacity: 1;
}

/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
.slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 40px;
    height: 40px;
    background: black;
    cursor: pointer; /* Cursor on hover */
	border-radius: 50%;
}

.slider::-moz-range-thumb {
    width: 25px;
    height: 25px;
    background: black;
    cursor: pointer; /* Cursor on hover */
}
.range{
	display:flex;
	justify-content: center;
	align-items: center;
	color:white;
	width:3em;
	font-size:1.5em;
	height:3em;
	border-radius:50%;
	background-color: #3d3d3d;
	margin:1em;
	margin-bottom:0;
	order:-1;
	user-select: none;
}

.biz{
	background:purple;
}
.indiv{
	background:yellow;
}

.results{
	display:flex;
	flex-direction: column;
	justify-content: flex-start;
	align-items: flex-start;
	box-shadow: 3px 3px 15px rgba(0,0,0,0.2);
	background:white;
}
.results-numbers{
	font-size:2em;
}
.results-disclaimer{
	text-align: center;
	padding:1em;
	margin-bottom:0.5em;
}
.cost-bars-container{
	width:100%;
	border-bottom:1px solid #686868;
}
.color-bar{
	display:flex;
	height:2em;
	align-items: center;
	justify-content: center;
	max-width:90%;
	align-self: center;
}
.color-bar-box{
	align-self: center;
	width:100%;
	padding:0.5em;
	background:#d6d6d6;
	box-shadow: inset 0px 1px 1px rgba(0,0,0,0.2);
}
.red{
	width:100%;
	background:#e04c2a;
}
.green{
	background:#5eb54e;
}
.color-bar-text{
	color:white;
}
.result-percentage{
	font-size:2em;
	width:1em;
	height:1em;
	margin-bottom:0 !important;
}
.row{
	display:flex;
	align-items: center;
	justify-content: space-around;
	margin:0 0.5em 0.5em 0.5em;
	width:100%;
	text-align: center;
	font-size: 1em;
}

.col{
	display:flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	width:100%;
}
.white{
	background:white;
}
.percentages{
	display:flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	margin:0 auto;
	padding-top:0.5em;
	padding-bottom:0.5em;
	border-bottom:1px solid #686868;
	width:100%;
	height:10.5em;
}
.percentage{
	color:white;
	padding:1.3em;
	background:#3a3a3a;
	border-radius: 50%;
	display:flex;
	align-items: center;
	justify-content: center;
	margin-bottom: 0.5em;
}

.results>h1{
	font-size: 2em;
}
.results-heading{
	font-size:2em;
	margin-top:0.5em;
	text-align: center;
}
.results-sub-heading{
	font-size:0.9em;
	margin-bottom:0.5em;
	text-align: center;
}

.results-total{
	font-size:2em;
}
.results-total-year{
	font-size:1.5em;
	margin:0 0 0.5em 0;
}

.header-box{
	background:white;
	width:100%;
	text-align: center;
	padding:0.5em 0;
	border-bottom:0.5px solid #686868;
}
.contributions-row{
	display:flex;
	width:100%;
	align-items:center;
	padding:0.2em 0;
	justify-content: space-between;
}
.contributions-row-heading{
	/* width:100%; */
	text-align: left;
	margin-left: 20px;
}
.contributions-row-result{
	/* width:100%; */
	text-align: right;
	margin-right: 20px;
}
.middle-box{
	box-sizing: border-box;
	padding:0.5em;
	width:100%;
	background:#f2f2f2;
	text-align: center;
}
.middle-box>h2{
	font-size: 1.3em;
}
.contributions-box{
	background: white;
	width:100%;
}
.total-box{
	width:100%;
	background: white;
	text-align: center;
	padding:0.5em 0;
}
.total-box>p:first-child{
	font-size: 3em;
}
.social-icons{
	display:flex;
	justify-content: space-around;
	align-items: center;
	width:100%;
	padding:10px 0;
	background:#f2f2f2;
	border-top:#686868 1px solid;
}

/* Media Queries */
 @media screen and (min-width:350px) {
	 .card-text{
		font-size: 1.5em;
	}
	.select-box{
		width:280px;
	}
	.slider{
		width:315px;
	}
	.contributions-row-heading{
		padding:0.5em;
	}
	.results{
		width:90%
	}
}

 @media screen and (min-width:450px) {
	 .card{
		 width:90%;
		 padding:20px;
	 }
	 button{
		width:90%;
	}
	.slider{
		width:90%;
	}
	.results{
		width:80%
	}

  }

@media screen and (min-width:600px) {
 	.card{
		width:540px;
		padding:20px;
	}
 }

 @media screen and (min-width:800px) {
  	.card{
 		width:67%;
 		padding:20px;
 	}
	.percentages{
		width:496px;
	}
	.slider{
		width:402px;
	}

	button{
		width:446.39px;
	}
  }

